feat: recoil - selectorFamily

--- a/docs/01.前端/01.React/04.recoil/01.入门.md
+++ b/docs/01.前端/01.React/04.recoil/01.入门.md
@@ -15,33 +15,40 @@ tags:
 
 ## 简介
 
-<!-- `recoil`和 `redux`一样，是`react`的一个状态管理库。它想采用类react的形式来实现一个状态管理工具。因此它定义了一个`有向图`，数据流为`atom` ---> `selector` ---> 组件。你可以通过和React类似的`get/set`方法来操作`atom`和`selector`. -->
+recoil是一个状态管理工具，意图配合react18新特性(**并行模式**)，主打一个**类hooks**的写法，弥补react官方在状态管理上的不足。
 
-<!-- `atom` === state
-`selector` === set方法
+`recoil`依赖于`react18`的`concurrent模式`(/pages/9b2961/#concurrent模式),[用suspense简单实现](/pages/423a59/#fetch Data)
 
-是不是很像hooks？ 
-
-使用它，你可以获得：
-- React18出现的`Concurrent模式`
-- 将本地的state无缝替换成`recoil状态` -->
 
 ### atom
 
 它是状态的单位，可以使用`atom`直接替代组件内部的state，多个组件可以使用同一个`atom`，这意味着这些组件共享着同一个状态。
 
 我们要做的，只是将`useState`改写一下罢了
-```js
-const [fontSize , setFontSize] = useState(14) 
 
-const fontSizeState = atom({
-  key: "fontSizeState",
-  default: 14,
-});
-const [fontSize, setFontSize] = useRecoilState(fontSizeState);
-```
+<code-group>
+  <code-block title="useState" >
+    ```js
+    const [fontSize , setFontSize] = useState(14) 
+    ```
+  </code-block>    
 
-我们使用官方的示例来快速理解`atom`: 
+  <code-block title="recoil" active>
+    ```js
+      const fontSizeState = atom({
+        key: "fontSizeState",
+        default: 14,
+      });
+      const [fontSize, setFontSize] = useRecoilState(fontSizeState);
+    ```
+  </code-block>   
+</code-group>
+
+:::tip
+`useRecoilValue`用于获取`atom或selector`的状态
+:::
+
+我们使用官方的示例来快速理解`atom`,点击放大按钮 -> 修改状态 -> 更改视图: 
 
 <<< @/codes/react-demo/src/pages/recoil/begin/atom.jsx
 
@@ -50,7 +57,12 @@ const [fontSize, setFontSize] = useRecoilState(fontSizeState);
 
 对于`Selector` , 你可以直接把他看作是`Vue的computed`，它接受一个`atom`或者其他`selector`，用于计算**state的派生数据**
 
+
+
 官方的实例：
 
 <<< @/codes/react-demo/src/pages/recoil/begin/selector.jsx
 
+:::tip
+`get` == `useRecoilValue`
+:::
