--- a/docs/01.前端/01.React/04.recoil/02.Selector详解.md
+++ b/docs/01.前端/01.React/04.recoil/02.Selector详解.md
@@ -15,7 +15,7 @@ tags:
 
 ## 定义
 
-```js
+```ts
 function selector<T>({
   key: string,
 
@@ -37,6 +37,7 @@ function selector<T>({
 })
 ```
 
+
 ## selector可以接收selector，做多层计算
 
 以汇率转化为例：
@@ -47,7 +48,7 @@ function selector<T>({
 
 默认情况下（不提供`set方法`），`selector`会返回一个只读对象,它的值只能用`useRecoilValue`获取————就像入门篇的那样。但是当你传入了`set`方法后，你就可以用`useRecoilState`同时获取`get和set`方法了。
 
-**但是**，这个`set`方法并不是像你想的那样去修改自身的值，它**只能修改其他atom和selector**。比如我们编写一两个相互转化的input框
+**但是**，这个`set`方法并不是像你想的那样去修改自身的值，它**只能修改其他atom和selector**。比如我们编写两个相互转化的input框
 
 <<< @/codes/react-demo/src/pages/recoil/selector/set.jsx
 
@@ -67,11 +68,11 @@ function selector<T>({
 
 ## selectorFamily
 
-你可能注意到，我们开篇给出的`Selector`结构中，并没有给出传入参入的入口。因此，我们想要实现动态传参需要一个新的方法`selectorFamily`
+你可能注意到，我们开篇给出的`Selector`结构中，并没有给出传入参数的入口。因此，我们想要实现动态传参需要一个新的方法**selectorFamily**
 
 先给出定义：
 
-```js
+```ts
 function selectorFamily<T, Parameter>({
   key: string, 
 
@@ -90,3 +91,13 @@ function selectorFamily<T, Parameter>({
 }): Parameter => RecoilState<T>
 ```
 
+简单来说，变化点只有以下两点：
+1.  调用`selectorFamily`函数时传入参数
+2.  定义`selectorFamily`函数的get方法时，返回一个新的函数,对这种写法感到不习惯的话可以看一下[箭头函数](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions/arrow_functions)和[Hoc](/pages/1aa093/)
+
+<<<@/codes/react-demo/src/pages/recoil/selector/selectorFamily.jsx{11,20}
+
+
+## 数据流例子：
+
+<<< @/codes/react-demo/src/pages/recoil/selector/dataFlow.jsx
