feat: react - suspense

--- a/docs/01.前端/01.React/01.进阶/08.suspense.md
+++ b/docs/01.前端/01.React/01.进阶/08.suspense.md
@@ -15,7 +15,29 @@ tags:
 
 `Suspense`是一个实现异步加载数据的React组件，它可以实现懒加载组件、组件动态渲染等功能，它的`fallback`参数可以由用户提供一个组件未加载完成时的渲染组件。
 
-其原理来自于[ErrorBoundary](/pages/1616ee/)
+其原理来自于[ErrorBoundary](/pages/1616ee/),用`componentDidCatch`来捕获请求未完成时抛出的异常。
+
+:::tip
+  这里的`componentDidCatch`实际上是`React`底层的一层拦截，而不是暴露出给用户使用的生命周期函数`ComponentDidCatch`。
+:::
+
+## 手动实现：
+
+我们手动实现一个`Suspense`，可以发现请求时渲染被暂停了，但是`getDerivedStateFromError`（和`componentDidCatch`相同作用）在捕获到错误之前就被底层捕获了。因此`loading...`不会被渲染出来。
+
+渲染过程： 空白 ---> img
+
+<<< @/codes/react-demo/src/pages/react18/suspense/simulation-bad.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/suspense.gif)
+
+#### 改进
+
+我们`throw`一个对象，对象中包含已经发出的请求`promise`实体，并在`ComponentDidCatch`中获取该实体并跟随其状态。
+
+<<< @/codes/react-demo/src/pages/react18/suspense/simulation-good.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/my-suspense.gif)
 
 ## 懒加载
 
