feat: recoil - loadable

--- a/docs/01.前端/01.React/04.recoil/01.入门.md
+++ b/docs/01.前端/01.React/04.recoil/01.入门.md
@@ -15,9 +15,11 @@ tags:
 
 ## 简介
 
-recoil是一个状态管理工具，意图配合react18新特性(**并行模式**)，主打一个**类hooks**的写法，弥补react官方在状态管理上的不足。
+`recoil`是一个状态管理工具，意图配合react18新特性(**并行模式**)，主打一个**类hooks**的写法，弥补react官方在状态管理上的不足。
 
-`recoil`依赖于`react18`的`concurrent模式`(/pages/9b2961/#concurrent模式),[用suspense简单实现](/pages/423a59/#fetch Data)
+:::tip
+强烈建议在学习`recoil`之前先学习`react18`的相关特性，如[Transition](/pages/9b2961/)和[suspense](/pages/423a59/)，他们有利于你了解`recoil`功能的实现原理。否则你后续可能经常会有“为什么要这么写”的疑惑。除此之外，[SWR](/pages/b56d4f/)的写法和其也非常接近，倒不如说这是`react`往后的一种发展趋势
+:::
 
 
 ### atom
@@ -66,3 +68,18 @@ recoil是一个状态管理工具，意图配合react18新特性(**并行模式*
 :::tip
 `get` == `useRecoilValue`
 :::
+
+## Loadable
+
+`Loadable`表示`atom`和`selector`的当前状态，是一个`Object对象`，结构如下：
+
+-   `state` : 当前状态，值为`hasValue || hasError || loading`
+-   `contents` : 当前值，根据`state`的状态不同，返回不同值
+    -   `hasValue` : value值
+    -   `hasError` : error值
+    -   `loading` : `contents.toPromise()` 返回 Promise对象
+
+功能和[手动实现Suspense](/pages/423a59/#手动实现)重合
+
+使用例子：
+<<<@/codes/react-demo/src/pages/recoil/begin/loadable.jsx
