--- a/docs/01.前端/01.React/04.recoil/02.Selector详解.md
+++ b/docs/01.前端/01.React/04.recoil/02.Selector详解.md
@@ -65,6 +65,12 @@ function selector<T>({
 
 <<< @/codes/react-demo/src/pages/recoil/selector/async.jsx
 
+事实上，异步`Selectors`的原理是在每次`useRecoilValue`时判断请求的状态，如果还在`loading`，`throw promise`给`Suspense`捕获，渲染`loadingUI`,并跟踪请求，请求完成后根据`.then`方法修改状态，渲染结果。
+
+原理：
+[手动实现Suspense](/pages/423a59/#手动实现)
+[concurrent模式](/pages/9b2961/#concurrent模式)
+
 
 ## selectorFamily
 
