--- a/docs/01.前端/01.React/04.recoil/01.入门.md
+++ b/docs/01.前端/01.React/04.recoil/01.入门.md
@@ -18,7 +18,7 @@ tags:
 `recoil`是一个状态管理工具，意图配合react18新特性(**并行模式**)，主打一个**类hooks**的写法，弥补react官方在状态管理上的不足。
 
 :::tip
-强烈建议在学习`recoil`之前先学习`react18`的相关特性，如[Transition](/pages/9b2961/)和[suspense](/pages/423a59/)，他们有利于你了解`recoil`功能的实现原理。否则你后续可能经常会有“为什么要这么写”的疑惑。除此之外，[SWR](/pages/b56d4f/)的写法和其也非常接近，倒不如说这是`react`往后的一种发展趋势
+强烈建议在学习`recoil`之前先学习`react18`的相关特性，如[Transition](/pages/9b2961/)和[suspense](/pages/423a59/)，他们有利于你了解`recoil`功能的实现原理。否则你后续可能经常会有“为什么要这么写”的疑惑。
 :::
 
 
@@ -79,7 +79,18 @@ tags:
     -   `hasError` : error值
     -   `loading` : `contents.toPromise()` 返回 Promise对象
 
-功能和[手动实现Suspense](/pages/423a59/#手动实现)重合
+你可以通过`useRecoilValueLoadable`获取一个`Loadable`状态，并根据不同状态渲染不同内容。
+
+功能和[手动实现Suspense](/pages/423a59/#手动实现)类似
 
 使用例子：
 <<<@/codes/react-demo/src/pages/recoil/begin/loadable.jsx
+
+#### atom/selector 与 Loadable
+
+- `Loadable`的写法类似于 [SWR](/pages/b56d4f/) ， 它**不会throw promise来阻止渲染**，而是获得一个实时更新的状态。随着状态更新渲染不同视图
+- 获取`atom/selector`状态是**同步**方法，只有在`fullfill`状态下才会继续向下执行，若请求未完成，其会`throw Promise`给`Suspense`对象来加载loading状态。
+
+
+
+
