feat: rtk-query

--- a/docs/01.前端/01.React/03.Redux/02.Redux-Toolkit.md
+++ b/docs/01.前端/01.React/03.Redux/02.Redux-Toolkit.md
@@ -27,6 +27,7 @@
 从`Apollo Client, React Query, Urql, and SWR`等请求工具处获取了灵感，并添加了如下内容
 -   数据请求和缓存逻辑是基于`createSlice`和`createAsyncThunk`的
 -   提供缓存数据生命周期（`cache entry lifecycle`）选项
+-   API名称预定义（别名）
 
 具有如下方法：
 -   `createApi()` : 定义API目录，描述如何获取`data`
