--- a/docs/01.前端/01.React/03.Redux/01.简介.md
+++ b/docs/01.前端/01.React/03.Redux/01.简介.md
@@ -13,8 +13,24 @@ tags:
 
 ## 原则
 
--   `redux`希望我们在更新`state`的时候能够使用全新的对象，而非在原来的对象上做修改`（state.xxx = xxx）`。(可由`immer`解决，原理是使用`Proxy`)
--   禁止任何异步逻辑、依赖随机值和其他副作用代码（可由`thunk`解决）
+- 单一数据源
+- `state`只读，只能通过 `dispatch action`修改, `新state`必须是全新的对象，而非在原来的对象上做修改`（state.xxx = xxx）`。(可由`immer`解决，原理是使用`Proxy`)。
+- `reducer`只能是纯函数，异步逻辑由[thunk](/pages/c93e24/)完成
+- `action`只能是扁平对象
+
+目的：保证数据的**可预测性**。
+
+## 工作流程
+
+**初始化**
+1.  用 `root reducer`创建 `redux store`, 初始化 `state`
+2.  初始化渲染UI并订阅 `redux store`———— `redux store`数据改变通知订阅者
+
+**更新**
+1.  ui层 `dispatch action`
+2.  `reducer`处理，生成新state
+3.  `store`通知订阅者更新视图
+
 
 ## 术语
 
