--- a/docs/01.前端/01.React/03.Redux/05.redux-thunk.md
+++ b/docs/01.前端/01.React/03.Redux/05.redux-thunk.md
@@ -89,7 +89,7 @@ const logOutUser = ()=> (dispatch,getState) => {
 
 ## 案例
 
-目的：发送请求获取一张随机图片
+**目的：发送请求获取一张随机图片**
 
 `reducer.js`: 
 - 用`createSlice`帮我们创建`reducer`和`action`
@@ -107,11 +107,52 @@ const action = {
 
 `store.js`:`configureStore`有一些默认配置的中间件，`redux-thunk`就是其中之一，故无需改动
 
-<<< @/codes/react-demo/src/pages/redux/thunk/store.js
+```js
+import { configureStore } from '@reduxjs/toolkit'
+
+import imgReducer from './reducer'
+
+export default configureStore({
+    reducer: { 
+        imgReducer 
+    },
+})
+```
 
 调用：
 - 将`redux-thunk`作为中间件后（默认），它允许你直接将`thunk`函数传递给`store.dispatch`
 
-<<< @/codes/react-demo/src/pages/redux/thunk/index.jsx{13}
+```js{13}
+import store from "./store";
+import { Provider } from 'react-redux'
+import { getImgAsync } from './reducer'
+import { useSelector, useDispatch } from 'react-redux'
+
+
+function Img() {
+    const imgUrl = useSelector(state => state.imgReducer.imgUrl)
+    const dispatch = useDispatch()
+    const url = 'https://api.waifu.im/random'
+    return (
+        <div>
+            <button onClick={() => dispatch(getImgAsync(url))}>get img</button>
+            <img src={imgUrl} alt="" />
+        </div>
+    )
+}
+
+
+function App() {
+    return <Provider store={store}>
+        <Img />
+    </Provider>
+}
+
+export default App
+```
+
+**加入loading状态的获取**
+
+
 
 
