--- a/docs/03.工具/04.vscode.md
+++ b/docs/03.工具/04.vscode.md
@@ -9,9 +9,11 @@ tags:
   - vscode插件
 ---
 
-## markdown all in one
+## 插件
 
-### 快捷键
+### markdown all in one
+
+#### 快捷键
 
 -    加粗： ctrl + b
 -    斜体： ctrl + i
@@ -20,7 +22,7 @@ tags:
 -    数学公式 ： ctrl + m
 -    预览： ctrl + shift + v
 
-### 生成导航栏（table of content）
+#### 生成导航栏（table of content）
 
  `Ctrl + Shift + P`打开`command Palette` :
 
@@ -30,12 +32,12 @@ tags:
 - `Remove section numbers` : 去除`number head`
 - `Toggle code span` : 添加代码块
 
-### 为选择的文本粘贴链接
+#### 为选择的文本粘贴链接
 
 选中文本，`ctrl + v`
 
  
-##  Copy Relative Path Posix
+###  Copy Relative Path Posix
 
 如果你有复制相对路径的需要，你会发现，vscode内复制相对路径的效果是这样的：
 
@@ -53,8 +55,37 @@ tags:
 `windows`使用*反斜杆\\*作为路径分隔符
 :::
 
-## Vue VSCode Snippets
+### Vue VSCode Snippets
 
 - 生成组件页面：vbase-3
 - 具名slot : vslot-named
 
+## 配置
+
+### 配置setting.json
+
+1.   打开配置ui页面，
+`file -> preference -> settings ` 或 `ctrl + ,`
+
+2. 点击右上角的按钮
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220516115229.png)
+
+### 自定义snippets
+
+1.  `file -> preference -> user-snippets`
+2.  选择需要配置代码块的语言文件
+3. 配置`prefix`和`body`
+
+#### body语法：
+1.  数组结构
+2.  一个字符串一行
+3.  `$1,$2`代表待输入区，按`Tab`切换下一个输入去
+4.  `\t`表示缩进
+
+vscode 默认不启用 `markdown` 文件的代码提示， 你需要配置 `setting.json`文件并加上：
+```json
+    "[markdown]": {
+        "editor.quickSuggestions": true
+    },
+```
