--- a/docs/01.前端/01.React/03.Redux/03.基本使用.md
+++ b/docs/01.前端/01.React/03.Redux/03.基本使用.md
@@ -10,15 +10,13 @@ tags:
   - 
 ---
 
-## 定时器
-
 用`hooks`写一个定时器例子：
 
 <<<@/codes/react-demo/src/pages/redux/count/old.jsx
 
 ## 用redux进行改写
 
-因为创建`store`需要传入`reducer`，我们先实现一个定时器`reducer`，可以使用`createSlice`帮忙，它会帮我们根据我们定义的`reducer`自动生成相关`actions`
+因为创建`store`需要传入`reducer`，我们先实现一个定时器`reducer`，可以使用`createSlice`帮忙，它会帮我们根据我们定义的`reducer`自动生成相关`actions creator`
 
 `createSlice`函数的结构如下：
 
@@ -29,11 +27,36 @@ const slice = createSlice({
   reducers: reducer函数对象，key值作为reducer名称和action名称
 })
 
-const {actions , reducer} = slice // 自动生成reducer和actions
+const {actions , reducer} = slice // 自动生成reducer和actions creator
 //  通过actions.foo()来生成action对象，对象默认为{type : 切片名称 + reducer名称}
 ```
 
-<<<@/codes/react-demo/src/pages/redux/count/counterSlice.js
+实现：
+
+```js
+import { createSlice } from '@reduxjs/toolkit'
+
+export const counterSlice = createSlice({
+  name: 'counter',
+  initialState: {
+    value: 0
+  },
+  reducers: {
+    increment: state => { // 默认不带参
+      state.value += 1
+    },
+  }
+})
+
+/**
+ * createSlice自动生成相关的actions creator，导出给View层使用
+ * 默认不带payload参数
+ */
+export const { increment } = counterSlice.actions // 通过increment()生成action
+
+export default counterSlice.reducer // 导出reducer给store
+```
+
 
 -   在`store`引入刚才创建的`reducer`
 -   通过`configureStore`帮我们创建一个`store`对象
@@ -65,3 +88,104 @@ export default App
 完整代码
 
 <<<@/codes/react-demo/src/pages/redux/count/index.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/redux.gif)
+
+## 传参
+
+我们添加一个Input框和按钮，来添加指定数字到计时器中。要传入参数，修改我们需要先修改一下`slice`
+
+```javascript
+ reducers: {
+    increment: (state, { payload }) => { // 默认不带参
+      console.log(payload);
+      state.value += Number(payload || 1)
+    },
+  }
+```
+
+`reducer`的第二个参数代表了`action`，我们传入的数据默认会通过`action.payload`传入 `reducer`中。[为什么是action.payload](/pages/71277a/#Flux Standard Actions)
+
+视图层的修改：
+
+```js
+function Counter() {
+    const count = useSelector(state => state.counter.value)
+    const [num, setNum] = useState(0) 
+
+    const dispatch = useDispatch()
+
+    const incrementSpecialNum = () => {
+        dispatch(increment(num)) // 通过action createor(参数)向reducer传入参数，参数会存放在action.payload中
+        setNum(0)
+    }
+
+    return (
+        <div>
+            <div>
+                Value: {count}
+            </div>
+            <button onClick={() => dispatch(increment())}>增加</button>
+            <div>
+                请输入要增加的数字<input type='number' onChange={(e) => setNum(Number(e.target.value))} />
+            </div>
+
+            <button onClick={incrementSpecialNum}>增加自定义数字</button>
+        </div>
+    )
+}
+```
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/redux-params.gif)
+
+## reducer.prepare
+
+有时我们会想要在处理`action`之前对参数做一些处理。一个经典的案例就是 **列表添加表项**，在添加表项之前，我们会为该表项**添加一个随机id**。但是，根据redux设计原则， `reducer`中不应该存在任何随机值————所有的数据流都应该是可预见的。因此我们需要一个中间件在 `reducer`之前来处理 `action.payload`，`prepare`函数将扮演这个中间件角色。
+
+<<< @/codes/react-demo/src/pages/redux/prepare/reducer.js
+
+`prepare`函数返回的对象必须拥有`payload`属性,[遵循Flux原则](/pages/71277a/#Flux Standard Actions)，**如果没有提供payload属性，访问reducer的第二个参数action会得到一个undefined**。
+
+和刚才一样，为 `action creator`提供参数即可，传入的参数会成为 `reducer.prepare`的入参。
+
+<<<@/codes/react-demo/src/pages/redux/prepare/index.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/redux-prepare.gif)
+
+## store
+
+### preloadedState
+
+在初始化 `redux store`时，可以为指定的 `reducer` 设置默认state 。一般用于从 `localStorage` 取出缓存数据
+
+```js
+import { configureStore } from '@reduxjs/toolkit'
+import {  nanoid } from '@reduxjs/toolkit'
+import listReducer from './reducer'
+
+const preloadedState = {
+    listReducer : [
+        {
+            id : nanoid(),
+            title : 'local title',
+            content : 'local content'
+        }
+    ]
+}
+
+
+export default configureStore({
+    reducer: {
+        listReducer
+    },
+    preloadedState
+})
+```
+
+**preloadedState的优先级大于reducer中的initialState**
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220516165325.png)
+
+### subscribe
+
+`configureStore`会抛出一个`subscribe`方法，它在每个订阅者
