--- a/docs/01.前端/01.React/03.Redux/20.rtk-query基本使用.md
+++ b/docs/01.前端/01.React/03.Redux/20.rtk-query基本使用.md
@@ -10,9 +10,24 @@ tags:
   - 
 ---
 
-## rtk-query
+## RTK Query
 
-是一个将请求数据缓存到`redux`中的一个请求工具，它允许你为每一组请求配置一个`reducer`，并将其状态存储起来
+`Redux`团队推出的一个数据请求/缓存方案。包括以下内容
+-   跟踪`loading`状态，展示`spinner UI`
+-   避免分重复请求
+-   优化UI相应速度
+-   管理缓存
+
+从`Apollo Client, React Query, Urql, and SWR`等请求工具处获取了灵感，并添加了如下内容
+-   数据请求和缓存逻辑是基于`createSlice`和`createAsyncThunk`的
+-   提供缓存数据生命周期（`cache entry lifecycle`）选项
+-   API名称预定义（别名）
+
+具有如下方法：
+-   `createApi()` : 定义API目录，描述如何获取`data`
+-   `fetchBaseQuery()` : `fetch`的封装
+-   `ApiProvider()` : 同 react的Provider,如果你已经用了`Redux store`，则不需要它
+
 
 ## createApi
 
