--- a/docs/01.前端/01.React/03.Redux/03.基本使用.md
+++ b/docs/01.前端/01.React/03.Redux/03.基本使用.md
@@ -106,6 +106,10 @@ export default App
 
 `reducer`的第二个参数代表了`action`，我们传入的数据默认会通过`action.payload`传入 `reducer`中。[为什么是action.payload](/pages/71277a/#Flux Standard Actions)
 
+:::tip
+如果传入多个参数，只取第一个参数，如果要传多个参数，请使用对象结构
+:::
+
 视图层的修改：
 
 ```js
@@ -146,7 +150,7 @@ function Counter() {
 
 `prepare`函数返回的对象必须拥有`payload`属性,[遵循Flux原则](/pages/71277a/#Flux Standard Actions)，**如果没有提供payload属性，访问reducer的第二个参数action会得到一个undefined**。
 
-和刚才一样，为 `action creator`提供参数即可，传入的参数会成为 `reducer.prepare`的入参。
+传入的参数会成为 `reducer.prepare`的入参。**可以提供多个参数**
 
 <<<@/codes/react-demo/src/pages/redux/prepare/index.jsx
 
