--- a/docs/01.前端/01.React/03.Redux/04.immer.md
+++ b/docs/01.前端/01.React/03.Redux/04.immer.md
@@ -6,11 +6,15 @@
 
 <<< @/codes/react-demo/src/pages/redux/immer/demo1.js
 
-但是在我们向数组内 `push` 了一个新的数据后，我们并没有很好的办法判断新的数组是否和原来的数组一致。这使我们常常要浅克隆一个新数组，在新数组上进行数据的更新
+但是在我们向数组内 `push` 了一个新的数据后，我们并没有很好的办法判断新的数组是否和原来的数组一致。这使我们常常要浅克隆一个新数组，在新数组上进行数据的更新。
+
+::: tip
+因为循环进行每一个属性的比较将花费大量资源，对于嵌套结构更是如此。因此，直接比较对象的引用应该是确认新旧数据是否一致的最好办法。
+:::
 
 <<< @/codes/react-demo/src/pages/redux/immer/demo2.js
 
-但这样说也不是最好的办法，显然我们没有办法判断是否改变了数组（对象），只要浅克隆后，得到的数组就已经是一个新的数组了。
+但这样做也不是最好的办法，显然我们没有办法判断是否改变了数组（对象），只要浅克隆后，得到的数组就已经是一个新的数组了。
 
 这时候就要请出我们的主角 `immer` ，它完美的解决了我们的需求。我们只需要做两件事：
 1.  传入初始数据作为 `produce` 函数的第一个参数
@@ -18,4 +22,65 @@
 
 <<< @/codes/react-demo/src/pages/redux/immer/demo3.js
 
+## 手动简单实现
 
+思路： 为我们传入的初始数据生成一个代理对象，通过 `set`方法对代理对象中的属性进行修改。 代理对象中保存两份数据，一份存储源数据，一份存储修改后的数据。
+
+<<< @/codes/react-demo/src/pages/redux/immer/demo4.js#createProxy
+
+对代理对象调用传入的函数，并返回正确的数据。
+
+<<< @/codes/react-demo/src/pages/redux/immer/demo4.js#produce
+
+
+## 如果是数组嵌套对象结构
+
+假设我们有一个对象，并为其设置了 `Proxy` 代理:
+```js
+const sample = [
+    { id: 1, done: true },
+    { id: 2, done: false },
+]
+
+const proxy = new Proxy(sample , {
+    get(){...} ,
+    set(){...}
+})
+
+proxy[1].done = true
+```
+
+看上去我们好像修改了 `proxy` 对象，但事实上，代理中的 `set` 方法并不会执行。 这是因为是否执行 `set` 方法是依据被修改对象的**指针是否变动**来决定的。在这个例子中 `proxy[1]` 是一个对象，我们直接对对象中的数据进行修改，不会修改指针指向。
+
+那怎么办呢？我们需要把这个赋值语句拆开来看，它实际上可以看作是：
+
+```javascript
+const temp = proxy[1]
+temp.done = true
+```
+
+也就是说，代理的 `get` 方法是会执行的。那么我们需要修改一下设计： 
+
+当进入 `get` 方法后，如果子属性是 **对象/数组**，我们需要为子属性也建立一个代理对象，那么程序会这样执行：
+
+```javascript
+const temp = proxy[1] // 转化proxy[1]为代理对象
+temp.done = true // 进入子属性代理对象的 set 方法
+```
+
+让我们看一下修改后的 `createProxy` 函数：
+
+<<< @/codes/react-demo/src/pages/redux/immer/demo5.js#createProxy
+
+详细分析一下我们在`get`函数中做了哪些事：
+1.  需要判断访问的属性是对象中原本就存在的属性（访问代理对象）还是 `modifyed,copy` 这些代理生成的数据（访问源对象）
+2.  我们为子属性添加代理的操作不应该改变源对象，因此应该对 `copy` 对象中的子属性创建代理
+3.  代理属性应该添加一个 `parent` ,子属性修改时，父亲必然被修改。返回新数据而不是源数据
+
+然后我们还要还原代理数据为源数据————分为数据是数组还是对象来讨论：
+
+<<< @/codes/react-demo/src/pages/redux/immer/demo5.js#transform
+
+调用：
+
+<<< @/codes/react-demo/src/pages/redux/immer/demo5.js#run
