feat: redux-createAsyncThunk

--- a/docs/01.前端/01.React/03.Redux/05.redux-thunk.md
+++ b/docs/01.前端/01.React/03.Redux/05.redux-thunk.md
@@ -151,8 +151,53 @@ function App() {
 export default App
 ```
 
-**加入loading状态的获取**
+### 加入loading状态的获取
+
+我们可以修改一下 `reducer` 状态，除了 `data` 以外再加入 `status` 和 `error` : 
+```js
+ initialState: {
+        imgUrl: '',
+        status: 'idle',
+        error: null
+    },
+```
+
+这样我们就可以在请求数据的时候通过 `dispatch` 动态修改 `reducer` 状态。
+
+<<<@/codes/react-demo/src/pages/redux/thunk/reducer-loadStatus.js#getImgAsync
+
+并根据状态的不同，渲染展示不同的数据:
+
+<<< @/codes/react-demo/src/pages/redux/thunk/index.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/redux-thunk.gif)
 
 
+### 使用createAsyncThunk
+
+我们刚才手动实现的loading状态更新虽然也可以实现需求，但是每一次都编写这些重复的状态代码是件很没必要的事情。所以我们需要 `createAsyncThunk` 来帮助我们完成这项工作。
+
+`createAsyncThunk` 会生成一个 `action creator` 它有两个参数：
+```js
+createAsyncThunk(base action type , 包含异步操作的回调函数，返回值传入reducer)
+```
+
+它是这样工作的：
+- 用户在回调参数中返回一个 `Promise` 对象，`RTK` 监听这个对象并根据状态改变自动 `dispatch`
+- `dispatch action` 时会根据状态变化为第一个参数后面添加`/pending、/fulfilled、/rejected` 来动态生成 `action.type`
+
+简化后的`thunk`如下：
+
+<<< @/codes/react-demo/src/pages/redux/thunk/reducer-createAsyncThunk.js#createAsyncThunk
+
+`action`格式如下：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220518104046.png)
+
+`slice` 总是会为 `reduce` 生成一些 `action creator` ，那么对于这种自定义的 `AsyncThunk` ，我们应该有其他地方来进行 `reduce` 的配置 ———— `extraReducers`。
+
+`extraReducers` 允许我们提供一个回调函数，它会为我们提供一个 `builder` 参数，我们通过 `builder` 参数提供的方法来构建额外的`reducer`, 如`build.addCase(action creator , reducer)` 。我们为它传入刚才用 `createAsyncThunk` 创造的 `action creator` 并定义相应的 `reducer` 处理函数。
+
+<<< @/codes/react-demo/src/pages/redux/thunk/reducer-createAsyncThunk.js#extraReducers
 
 
