--- a/docs/03.工具/04.vscode.md
+++ b/docs/03.工具/04.vscode.md
@@ -11,6 +11,27 @@ tags:
 
 ## 插件
 
+### Setting Sync
+
+特点：
+- 通过 `gist` 存储配置信息
+- 在打开vscode时自动同步设置
+- 同步内容改变时自动上传
+- 通过gist分享配置文件
+
+同步内容：
+- 设置文件
+- 快捷键文件
+- 启动文件
+- 自定义代码块文件
+- 拓展
+- 工作区信息
+
+快捷键：
+- 通过 `alt + shift + u` 上传配置信息 
+- 通过 `alt + shift + d` 下载配置信息
+
+
 ### markdown all in one
 
 #### 快捷键
