feat: vue-expose

--- a/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup.md
+++ b/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup.md
@@ -121,3 +121,74 @@ tags:
 
 `$emit`、`setup(props,{emit})`、`defineEmit()`三种写法并不互斥。
 :::
+
+
+## 声明周期钩子
+
+在 `setup` 函数内要如何操作生命周期呢？**通过生命周期钩子函数。**
+
+**选项式API的生命周期选项和组合式API之间的映射**
+
+- beforeMount -> onBeforeMount
+- mounted -> onMounted
+- beforeUpdate -> onBeforeUpdate
+- updated -> onUpdated
+- beforeUnmount -> onBeforeUnmount
+- unmounted -> onUnmounted
+- errorCaptured -> onErrorCaptured
+- renderTracked -> onRenderTracked
+- renderTriggered -> onRenderTriggered
+- activated -> onActivated
+- deactivated -> onDeactivated
+
+例：
+```js
+export default {
+  setup() {
+    // mounted
+    onMounted(() => {
+      console.log('Component is mounted!')
+    })
+  }
+}
+```
+
+## getCurrentInstance
+
+`getCurrentInstance` 用于访问内部组件实例， **只能在setup或生命周期钩子中调用**。
+
+示例：
+
+```js
+const MyComponent = {
+  setup() {
+    const { proxy } = getCurrentInstance() // 有效
+
+    const handleClick = () => {
+      getCurrentInstance() // 无效
+      proxy // 有效
+    }
+
+  }
+}
+```
+
+## ref
+
+在 `setup` 中，不能使用 `this` 来访问当前对象实例，也就是说 `this.$refs` 无法使用。如要获取 `ref实例对象` ， 但是我们可以提前定义变量用于存储 `ref实例`。
+
+<<< @/codes/vue-demo/pages/vue3/setup/ref.vue
+
+## expose 
+
+`expose` 是 `Vue3.2` 新增的一个组件属性，它将限制父组件通过 `$ref` 能够访问到的属性值。
+
+使用 `expose` 我们可以避免外层组件直接修改子组件的私有属性，例如：子组件是一个添加器，我们将 `add` 方法暴露给父组件调用。将 `count` 作为一个私有属性保存，仅作渲染。
+
+子组件： 
+
+<<< @/codes/vue-demo/pages/vue3/setup/expose/add.vue
+
+父组件：
+
+<<< @/codes/vue-demo/pages/vue3/setup/expose/index.vue
