--- a/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
@@ -176,6 +176,16 @@ defineEmits<{
 
 ## defineExpose
 
+使用语法糖的情况下，组件默认是关闭的，也就是说如果想要访问子组件实例， `defineExpose` 是必要的。
+
+父组件：
+
+<<< @/codes/vue-demo/pages/vue3/setup-candy/defineExpose/index.vue
+
+子组件:
+
+<<< @/codes/vue-demo/pages/vue3/setup-candy/defineExpose/add.vue
+
 ## useSlots 和 useAttrs
 
 ```vue
@@ -186,3 +196,7 @@ const slots = useSlots()
 const attrs = useAttrs()
 </script>
 ```
+
+
+
+
