--- a/docs/02.后端/03.python/01.学习笔记/01.基础使用.md
+++ b/docs/02.后端/03.python/01.学习笔记/01.基础使用.md
@@ -9,7 +9,9 @@ tags:
   - 
 ---
 
-## 字符串
+## 数据类型
+
+### 字符串
 
 ```python
 print(r'\t') # \t  r''表示不转义
@@ -20,10 +22,13 @@ print('''
         2
         3
       ''') # 用''' 表示多行内容代替\n
+
+s = 'abc'
+s2 = s.replace('a' , 'A') # 替代
 ```
 
 
-## 元组
+### 元组
 
 元组 `tuple`和列表 `list` 非常类似，唯一的区别是它一旦初始化就不能修改。
 
@@ -34,24 +39,76 @@ t = (2, 3)
 t = (2,) # 为了区分元素和运算符括号，在声明只有一个元素的元组时会在后面加一个逗号
 ```
 
-## 逻辑运算
+### 字典
+
+```python
+d = {foo : 'foo'} # 定义
+print('bar' in d) # 是否存在
+print (d.get('bar') == None)   # 是否存在
+d.pop('foo') # 删除 
+
+```
+
+### set
+
+```python
+s = {"1","2"}
+s = set([1,2,3])
+s.add(4)
+s.remove(4)
+s2 = set([2,3,4])
+print(s1 & s2) # 利用位运算符 & 取交集
+print(s1 | s2) # 利用位运算符 | 取并集
+
+# a & b ：将a和b转化为二进制，将每一位 用& 计算
+# a | b : 将每一位 用| 计算
+
+```
+
+
+## 操作符
+
+### 逻辑运算
 
 ```python
 print(1 and 3)  # 3 与
 print(1 or 3) # 1 或
 if not a == 3 :  # 非
    print (a)
-   
+
+print
 ```
 
-## 运算符
+### 运算符
 
 ```python
 10 / 3  # 3.33333
 10 // 3  # 3 想下取整
 ```
 
-## 切片
+### 赋值
+
+```python
+a = 1
+b = 2
+
+# 我们假设计算一个斐波拉契数列，结果应该是a = 2 , b = 3
+# 写法一
+temp = b
+b = temp + a
+a = temp
+
+# 写法二
+temp = (b,a + b)
+a = temp[0]
+b = temp[1]
+
+# 写法三
+a,b = b , a+b
+
+```
+
+### 切片
 快速切割数组和类数组对象
 
 ```python
@@ -73,7 +130,7 @@ print(str[0:1]) # 1
 - `tuple,string` 同 `list`
 
 
-## 迭代
+### 迭代
 
 ```python
 obj = {'a': 1, 'b': 2}
@@ -86,14 +143,13 @@ for value in obj.values(): # 按值迭代
 for k,v in obj: # 按键值迭代
   print(k , v) 
 
-
 from collections.abc import Iterable
 
 print(isinstance('abc' , Iterable))  # 是否可迭代
 
 ```
 
-## 三目运算符
+### 三目运算符
 
 ```js
 const a = 1
@@ -106,7 +162,7 @@ res = '正数' if a > 0 else '非正数'
 # 正常结果 【判断语句】 异常结果 
 ```
 
-## if-else 简写
+### if-else 简写
 
 **赋值语句**
 ```python
@@ -132,11 +188,18 @@ ready = False if status == "loading" else False if status == "rejected" else Tru
 - True
 
 
-## 列表生成
+### 列表生成
 
 <<< @/codes/python-demo/list_comprehensions.py
 
-## 判断变量类型
+### 生成器
+
+<<< @/codes/python-demo/generator.py
+
+
+## 基本函数
+
+### 判断变量类型
 
 ```python
 x = 'abc'
