--- a/docs/02.后端/03.python/01.学习笔记/01.基础使用.md
+++ b/docs/02.后端/03.python/01.学习笔记/01.基础使用.md
@@ -196,6 +196,11 @@ ready = False if status == "loading" else False if status == "rejected" else Tru
 
 <<< @/codes/python-demo/generator.py
 
+### map/reduce
+
+
+
+
 
 ## 基本函数
 
