--- a/docs/01.前端/02.Vue/05.vuex/01.简介.md
+++ b/docs/01.前端/02.Vue/05.vuex/01.简介.md
@@ -18,70 +18,4 @@ tags:
 
 -   `mutation` == `reducer`
 -   `store.commit` == `store.dispatch`
-
-## demo
-
-定义store并挂载:
-
-```js
-import { createApp } from 'vue'
-import App from './App.vue'
-import {createStore} from 'vuex'
-// 创建一个新的 store 实例
-const store = createStore({
-    state () {
-      return {
-        count: 0
-      }
-    },
-    mutations: {
-      increment (state) {
-        state.count++  // 自带immer
-      }
-    }
-  })
-  
-
-createApp(App).use(store).mount('#app')
-
-```
-
-挂载store后可以通过 `this.$store`来访问store对象 取 `vuex` 中的数据的时候，需要使用 `computed` 进行依赖的挂载，否则store数据的更改不会直接影响视图的变化：
-
-
-```vue
-<template>
-    <div>
-        {{ count }}
-        <button @click="add">add</button>
-    </div>
-</template>
-
-<script>
-export default {
-    mounted() {
-        console.log(this.$store);
-    },
-    computed: {
-        count() {
-            return this.$store.state.count // 挂载依赖，会更新
-        }
-    },
-    // data(){
-    //     return {
-    //         count : this.$store.state.count // 不会更新
-    //     }
-    // },
-    methods: {
-        add() {
-            this.$store.commit('increment')
-            console.log(this.$store.state.count);
-        }
-    }
-}
-</script>
-
-```
-
-![](https://linyc.oss-cn-beijing.aliyuncs.com/vuex.gif)
-
+-   `getters` == `selector` ，vuex将取值操作放在`store`内部进行定义，而不像selector是一个用户自定义的函数
