--- a/docs/01.前端/02.Vue/05.vuex/01.简介.md
+++ b/docs/01.前端/02.Vue/05.vuex/01.简介.md
@@ -19,4 +19,5 @@ tags:
 -   `mutation` == `reducer`
 -   `store.commit` == `store.dispatch`
 -   `getters` == `selector` ，vuex将取值操作放在`store`内部进行定义，而不像selector是一个用户自定义的函数
--   `actions` === `thunk` 
+-   `actions` == `thunk` 
+-   `modules` == 子`reducer`
