feat: vuex-modules

--- a/docs/01.前端/02.Vue/05.vuex/06.modules.md
+++ b/docs/01.前端/02.Vue/05.vuex/06.modules.md
@@ -1,5 +1,3 @@
-## 简介
-
 `modules` 允许我们将一个庞大的state按功能切割成块，module和 state 有着完全相同的结构。
 
 以上文的获取图片为例，我们将这个功能单独分割为一个Module。
@@ -172,4 +170,53 @@ const imgModule = {
 ```js
 store.dispatch('imgModule/getImage')
 store.dispatch('getImage')
+```
+
+回顾我们刚才的代码，你或许会觉得从state中读取module数据十分繁琐，如`this.$store.state.imgModule.imgUrl`, 我们用mapState简化一些：
+
+```js
+export default{
+  computed: {
+        ...mapState({
+            imgUrl: state => state.imgModule.imgUrl
+        })
+    },
+}
+```
+
+似乎只是可读性变强了一些，代码并没有多少简化。事实上，我们可以为map方法提供第一个参数作为它的命名空间：
+
+```js
+export default{
+  computed: {
+        ...mapState('imgModule',{
+            imgUrl: state => state.imgUrl
+        })
+    },
+}
+```
+
+或者你可以用`vuex.createNamespacedHelpers()` 方法构建子模块的map方法，这样你可以和往常一样编写map方法
+
+```js
+import { mapMutations, mapActions, createNamespacedHelpers } from 'vuex'
+
+const { mapState } = createNamespacedHelpers('imgModule')
+
+export default {
+    data() {
+        return {
+            ready: false,
+        }
+    },
+    computed: {
+        ...mapState({
+            imgUrl: state => state.imgUrl
+        })
+        // ...mapState('imgModule', {
+        //     imgUrl: state => state.imgUrl
+        // })
+    },
+}
+
 ```
