--- a/docs/01.前端/02.Vue/06.pinia/02.Store.md
+++ b/docs/01.前端/02.Vue/06.pinia/02.Store.md
@@ -75,12 +75,21 @@ const counter = useCounterStore() // 生成store
 
 const add = () =>{
     // counter.num ++ // 直接操作state
-    // counter.$patch({num : counter.num + 1}) // $patch方法传入一个我们定义的局部state，增量更新源state
+    // counter.$patch({num : counter.num + 1})
+    // counter.$patch((state)=>{ // 
+    //     state.num = state.num + 1
+    // })
     counter.increment() // 调用方法
 }
 
 </script>
 ```
+
+::: tip
+$patch方法可能对不少人来说是个新颖的词语（至少对我来说），它可以这样使用：
+1. 传入一个我们定义的局部state，增量更新源state
+2. 如果你为$patch传入了一个函数，pinia会提供state作为参数供你操作，因为从vuex开始就已经引入了`immer`，所以放心大胆的直接操作对象和数组吧
+:::
 
 ## 响应性
 
