feat: pinia - getter

--- a/docs/01.前端/02.Vue/06.pinia/02.Store.md
+++ b/docs/01.前端/02.Vue/06.pinia/02.Store.md
@@ -14,7 +14,9 @@ import {createPinia} from 'pinia'
 createApp(App).use(createPinia()).mount('#app')
 ```
 
-通过 `defineStore` 创建一个store , state中定义的变量会直接绑定到store实例上，并且actions 中定义的函数也会直接绑定到store的实例上，允许我们通过 `store.increment()` 直接调用方法：
+通过 `defineStore` 创建一个store , 注意以下两点：
+1. state 定义为一个函数，理由和[vue组件的data](/pages/28b751/)一致 
+2. store中的state、getters、actions 的属性值会直接绑定到store实例上
 
 ```js
 import {defineStore} from 'pinia'
@@ -58,13 +60,14 @@ const counter = useCounterStore() // 生成store
 </script>
 ```
 
-pinia抛弃了redux的理念，它允许我们更方便的操作state，例如，我们会有三种方法修改`state.num`：
+pinia抛弃了redux的理念，它允许我们更方便的操作state，例如，我们会有三种方法修改状态，并且使用$reset重置state状态也是一个常见的场景：
 
 ```vue
 <template>
     <div>
         {{counter.num}}
         <button @click="add">add</button>
+        <button @click="reset">reset</button>
     </div>
 </template>
 
@@ -80,6 +83,10 @@ const add = () =>{
     //     state.num = state.num + 1
     // })
     counter.increment() // 调用方法
+}
+
+const reset = () =>{
+    counter.$reset()
 }
 
 </script>
