feat: pinia-subscribe

--- a/docs/01.前端/02.Vue/06.pinia/01.简介.md
+++ b/docs/01.前端/02.Vue/06.pinia/01.简介.md
@@ -4,7 +4,7 @@
 
 ## 和 Vuex相比
 
--   不再使用 `mutation`
+-   不再使用 `mutation`, 它将合并入 `actions` 中并除去纯函数限制
 -   不需要复杂的包装器来支持 `TypeScript` 
 -   使用 `useStore` 自动化生成 `store` ，而不是在项目入口配置
 -   不再使用嵌套型 `modules` 。你虽然还可以在一个 store 中引用另一个store，但从设计理念上来说，**pinia是扁平的**
