--- a/docs/02.后端/02.nodejs/04.fs.md
+++ b/docs/02.后端/02.nodejs/04.fs.md
@@ -50,11 +50,12 @@ try{
 
 ## API
 
-为了偷懒，仅记录异步方法函数
 
 ### 读取目录
 
-**异步**：
+#### readdir
+
+**异步**
 
 ```js
 fs.readdir(
@@ -63,38 +64,64 @@ fs.readdir(
         encoding  : String (默认'utf-8'),
         withFileTypes : boolean
     },
-    callback(err , files : String[]))
+    callback(err , files <String[]> , <[fs.Dirent[]](#fs.Dirent)>)
+    )
 ```
 
 -   **path** : 提供的文件夹文件，你可以直接打印 `__dirname` 来查看当前的文件夹路径
 -   **options** : 可选项，可以是**字符串，对象**，
     -   字符串：encoding编码
-    -   对象： 如果将 `withFileTypes` 设为 `true` ，返回的结果会是 `fs.Dirent` 类型
+    -   对象： 如果将 `withFileTypes` 设为 `true` ，返回的结果会是 [fs.Dirent](#fs.Dirent) 类型
 -   **callback** ： 回调函数，`files` 为当前目录下的文件数组列表
 -   返回： none
 
-
-关于 `fs.Dirent`类常用的方法为：
+**同步**
 
 ```js
-fs.readdir(__dirname, {withFileTypes : true}, (err, files) => {
-    if (err) return console.error(err)
-    // console.log("异步读取: " + files);
-    console.log(files[0].isDirectory()); // 是否是文件夹
-    console.log(files[0].isFile()); // 是否是文件
-    console.log(files[0].name); // 文件（夹）名字
-})
-
+fs.readdirSync(
+    path,
+    options
+)
 ```
+
+返回： <string[]> | <[fs.Dirent[]](#fs.Dirent)>
+
+
+#### openDir
+
+**异步：**
+
+```js
+fs.opendir(
+    path,
+    options<String | Object>?:{
+        encoding <string> :  默认'utf-8'， 编码
+        bufferSize <number> : 默认 32 ， 内存缓冲的目录条数
+    },
+    callback(err , dir : [<fs.Dir>](#fs.Dir))
+    )
+)
+```
+
+**同步：**
+
+```js
+fs.opendirSync(
+    path ,
+    options
+)
+```
+返回 <[fs.Dirent[]](#fs.Dirent)>
+
 
 ### 读取文件
 
 默认缓冲整个文件，为了加快读取速度，可以通过 `fs.createReadStream()` 进行流式传输。这样的话可以使用 `options` 中的 `signal`参数进行终止读取操作
 
-#### 类型
+#### readFile
 
 ```js
-fs.readyFile(
+fs.readFile(
     path ,
     options<String | Object>?:{ 
         encoding  : String (默认'utf-8'),
@@ -105,11 +132,36 @@ fs.readyFile(
 ```
 
 
-#### demo
-
 ```js
    fs.readFile(path.join(__dirname , 'path.js') , (err,files)=>{
         // console.log(files); // buffer二进制
         console.log(files.toString()); 
     })
 ```
+
+
+## Class类
+
+### fs.Dirent
+
+常见场景：通过[fs.readdir()](#readdir) 或 `fs.readdirSync() `在 `withFileTypes` 选项设置为 `true` 的情况下调用时返回 **dirent对象**。
+
+常用方法：
+-   **dirent.isDirectory()**  是否是文件夹
+-   **dirent.isFile()** 是否是文件
+-   **dirent.name**  文件（夹）名字
+
+
+### fs.Dir
+
+常见场景：通过 [fs.opendir()](#opendir)、`fs.opendirSync()` 或 `fsPromises.opendir()` 创建 **dir对象** 。
+
+常用方法：
+-   **dir.readSync()**： 同步读取下一个目录条目，返回[fs.Dirent](#fs.Dirent)对象，若无下一个条目，返回null
+-   **dir.read(callback(err, [fs.Dirent](#fs.Dirent)))** ： 相当于调用了 `dir.read()` 的 `.then()` 方法 
+-   **dir.read()**： 返回Promise或null对象
+-   **dir.close()** : 关闭目录的 [FileHandle](#FileHandle)
+-   **dir.path** ： 路径
+-   **dir[Symbol.asyncIterator]()** ： 迭代器，对每一个dir对象调用 `dir.read()` 方法直到返回null
+
+### FileHandle
