feat : for await of

--- a/docs/01.前端/06.JavaScript/01.ES6/04.迭代器与生成器.md
+++ b/docs/01.前端/06.JavaScript/01.ES6/04.迭代器与生成器.md
@@ -55,9 +55,53 @@ function next(){
 如果使用for循环而不是直接调用next方法，js会帮我们拿到返回对象{done : boolean , value : any} 中的`value` ———— 和前面我们自己实现的迭代器一样。
 :::
 
-## Symbol.asyncIterator
+## for await of
+
+`for await of` 用于遍历一个**异步迭代对象**———— 和拥有 `Symbol.iterator` 方法的对象被称为可迭代对象类似，拥有`Symbol.asyncIterator`方法属性的对象被称为异步迭代对象。
 
 > Symbol.asyncIterator 符号指定了一个对象的默认异步迭代器。如果一个对象设置了这个属性，它就是异步可迭代对象，可用于for await...of循环。
 
-当然，`Symbol.asyncIterator` 不能只是一个null或undefined，它应该定义
+**语法**
+
+```js
+for await (variable of iterable) {
+  statement
+}
+```
+
+`iterable` : 被迭代的对象， 与 `for of` 相比，这里的对象可以返回`Promise`， Promise`resolve`抛出的结果值将会被赋给`variable`。
+
+<code-group>
+    <code-block title='异步迭代器' action>
+    <<<@/codes/javaScript/es6/for-await-of.js#myAsyncIterable
+    </code-block>
+    <code-block title='迭代器'>
+    <<<@/codes/javaScript/es6/for-await-of.js#myIterator
+    </code-block>
+</code-group>
+
+可以看到，我们在迭代器的基础上做了两点改动：
+1.  next函数返回一个Promise对象，Promise resolve出的对象依旧是 `done,value` 格式。我们手动调用next函数观察两个迭代器返回值的区别：
+
+```js
+console.log(myIterator.next());  // { done: false, value: 1 }
+console.log(myAsyncIterable.next());  // Promise { { done: false, value: 1 } }
+```
+
+2.  将`Symbol.iterator` 更改为 `Symbol.asyncIterator`
+
+如果我们直接用for循环来调用一个异步迭代器,将会得到一个错误 `myAsyncIterable is not iterable` ，原因是for函数尝试调用迭代器的`Symbol.iterator`方法，但没有找到，于是它判断对方并不是一个可迭代对象：
+
+```js
+try{
+    for(const n of myAsyncIterable){ 
+        console.log(n); 
+    }
+}catch(e){
+    console.log(e);
+}
+```
+
+因此我们要使用 `for await` 来调用迭代对象的 `Symbol.asyncIterator` 方法。它会调用迭代对象的next方法。如果next方法返回的是Promise对象，循环将阻塞，直到Promise抛出结果，for函数将取出结果中的`value`值，并根据`done`判断是否需要进行下一轮迭代。
+
 
