feat: 生成目录文件

--- a/docs/03.工具/02.可视化工具.md
+++ b/docs/03.工具/02.可视化工具.md
@@ -39,6 +39,7 @@ tags:
 - [heidisql](https://www.heidisql.com/) : mysql数据库可视化工具
 - [向日葵远程控制软件](https://sunlogin.oray.com/) : 远程控制软件
 - [daemon tools](https://www.daemon-tools.cc/chn/home) : 光盘（虚拟磁盘）制作软件，老游戏必备
+- [office tools plus](https://otp.landian.vip/zh-cn/) : Office 部署工具 ，**有激活工具**，`ctrl + p` 打开命令框，输入`ospp /ilbyid ProPlus2019Volume /sethst:kms.loli.best /setprt:1688 /act`
 
 :::tip
 有些需要科学上网
