feat: javaScript generator

--- a/docs/01.前端/06.JavaScript/01.ES6/04.迭代器.md
+++ b/docs/01.前端/06.JavaScript/01.ES6/04.迭代器.md
@@ -1,5 +1,5 @@
 ---
-title: 迭代器与生成器
+title: 迭代器
 date: 2022-05-30 11:53:33
 permalink: /pages/4b282c/
 categories:
@@ -57,7 +57,7 @@ function next(){
 
 生成器带有 `*` 号，生成器返回一个迭代对象，带有`next()`方法和`Symbol.iterator()`方法。它可以这样定义：
 
-<<<@/codes/javaScript/es6/generator.js#basic
+<<<@/codes/javaScript/es6/generator/index.js
 
 关于`yield`，见下图：
 
