feat: baidu-push

--- a/docs/01.前端/02.Vue/00.基本使用/01.slot.md
+++ b/docs/01.前端/02.Vue/00.基本使用/01.slot.md
@@ -2,6 +2,9 @@
 title: slot
 date: 2022-05-06 20:12:17
 permalink: /pages/cc00d5/
+sitemap:
+  exclude: false
+  changefreq: monthly
 categories:
   - 前端
   - Vue
