--- a/docs/01.前端/06.JavaScript/01.ES6/05.生成器.md
+++ b/docs/01.前端/06.JavaScript/01.ES6/05.生成器.md
@@ -67,3 +67,17 @@ tags:
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220531140812.png)
 
+
+## 练习一 async/await
+
+`async/await` 是ECMA2017提出的一个javaScript的异步解决方案，它可以用于以同步写法执行异步代码，增强代码的可读性：
+
+<<< @/codes/javaScript/es6/generator/async.js#async
+
+其实，`async/await`底层就是利用生成器来实现的，我们完全可以用生成器自己来构建一个`async`函数, 实现思路是用 **yield返回值是由外部提供的** 这个特性：
+1.  定义一个生成器 `yield` 我们要执行的Promise对象
+2.  监听Promise执行状态在结束后调用 **next()** 方法，向生成器输入异步操作的结果
+3.  生成器内部获得异步操作的结果并返回
+
+
+
