--- a/docs/02.后端/03.python/01.学习笔记/00.Vscode配置开发环境.md
+++ b/docs/02.后端/03.python/01.学习笔记/00.Vscode配置开发环境.md
@@ -29,3 +29,4 @@ tags:
 3.  输入`python:select interpreter`（选择解释器）
 4.  选择你刚创建的虚拟环境
 
+教程参考：[廖雪峰python教程](https://www.liaoxuefeng.com/wiki/1016959663602400)
