--- a/docs/01.前端/06.JavaScript/01.ES6/05.生成器.md
+++ b/docs/01.前端/06.JavaScript/01.ES6/05.生成器.md
@@ -12,7 +12,7 @@ tags:
 
 ## generator简介
 
-我们在上一节[迭代器](/pages/4b282c/)中已经简单介绍了生成器的基本使用，它能够用一个 `*` 号 于 `yield` 语句帮我们快速生成我们所需的迭代器对象，在本节中，我们会详细讨论生成器的剩余内容，并解析一个较为复杂的例子：如何用生成器构造一个无限的素数序列。
+我们在上一节[迭代器](/pages/4b282c/)中已经简单介绍了生成器的基本使用，它能够用一个 `*` 号 于 `yield` 语句帮我们快速生成我们所需的迭代器对象，在本节中，我们会详细讨论生成器的剩余内容，并解析两个例子：如何手动实现`async/await`、如何用生成器构造一个无限的素数序列。
 
 <<<@/codes/javaScript/es6/generator/index.js
 
@@ -74,10 +74,47 @@ tags:
 
 <<< @/codes/javaScript/es6/generator/async.js#async
 
-其实，`async/await`底层就是利用生成器来实现的，我们完全可以用生成器自己来构建一个`async`函数, 实现思路是用 **yield返回值是由外部提供的** 这个特性：
+其实，你可以将 `async` 看做是一个包装器函数，负责执行真正的函数，`await` 看作是一个 `yield` 语句 。
+
+```js
+async function run() {
+    const res = await req()
+    console.log(res);//foo
+    const res2 = await req2()
+    console.log(res2); // 'bar'
+}
+
+function* m_run() {
+    const res = yield req()
+    console.log(res);
+    const res2 = yield req2()
+    console.log(res2);
+}
+
+function m_async(func){
+  执行传入的函数
+}
+
+m_async(m_run())
+```
+
+我们完全可以用生成器自己来构建一个这样的`async`函数, 实现思路是用 **yield返回值是由外部提供的** 这个特性：
 1.  定义一个生成器 `yield` 我们要执行的Promise对象
 2.  监听Promise执行状态在结束后调用 **next()** 方法，向生成器输入异步操作的结果
 3.  生成器内部获得异步操作的结果并返回
 
+<<< @/codes/javaScript/es6/generator/async.js#m_async
 
+## 练习二 ： 无限素数序列
 
+[埃拉托斯特尼筛法](https://baike.baidu.com/item/%E5%9F%83%E6%8B%89%E6%89%98%E6%96%AF%E7%89%B9%E5%B0%BC%E7%AD%9B%E6%B3%95/374984?fromtitle=%E5%9F%83%E6%8B%89%E6%89%98%E8%89%B2%E5%B0%BC%E7%AD%9B%E9%80%89%E6%B3%95&fromid=4524938)求素数：
+
+1.  生成从2开始的自然数序列： 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, ...
+2.  下一个数字是2，2的倍数一定不是素数：用filter函数把2的倍数筛掉：3, ~~4~~, 5, ~~6~~, 7, ~~8~~, 9, ~~10~~, 11, ~~12~~, 13, ~~14~~, 15, ~~16~~, 17, ~~18~~, 19, ~~20~~, ...
+3.  下一个数字是3，3的倍数一定不是素数：用filter函数把3的倍数筛掉：~~4~~, 5, ~~6~~, 7, ~~8~~, ~~9~~, ~~10~~, 11, ~~12~~, 13, ~~14~~, ~~15~~, ~~16~~, 17, ~~18~~, 19, ~~20~~, ...
+
+<<< @/codes/javaScript/es6/generator/prime.js
+
+虽然代码很简洁，但背后的执行流程还是相当繁琐的，每一次执行 `m_filter` 函数时，`arr` 参数总是指向上一轮的生成器对象，上一轮的arr对象又指向上上轮... ，这代表了我们一旦访问了`item` ，需要获得一个 yield值，就会不断从最里面的生成器不断向外层 yield 值，直到最外层的生成器获取到里层yield出的值为止 ：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220531231818.png)
