feat:python - 尾递归

--- a/docs/02.后端/03.python/01.学习笔记/03.函数.md
+++ b/docs/02.后端/03.python/01.学习笔记/03.函数.md
@@ -15,7 +15,7 @@ sitemap:
 
 
 
-## 函数
+## 基本概念
 
 ### 参数
 
@@ -164,29 +164,44 @@ def person(name='lihua', age, city, job): # 无法通过编译 Non-default argum
 ```
 
 
-### 判断变量类型
 
-```python
-x = 'abc'
-y = 123
-
-isinstance(x , str)
-isinstance(y , str)
-```
-
-### 求和函数
-
-```python
-a = [1,2,3]
-
-print(sum(a))
-```
 
 ### lambda函数(匿名函数)
 
 `lambda 入参：返回值表达式`
 
 <<< @/codes/python-demo/lambda.py
+
+### 尾递归函数
+
+以一个经典的递归函数举例，它会执行一个累积计算：
+
+```python
+def fact(n):
+    if n==1:
+        return 1
+    return n * fact(n - 1)
+```
+
+递归函数会造成栈溢出，因为它会不断初始化新的递归函数放入栈中：
+-  fact(5)
+-  5 * fact(4)
+-  5 * (4 * fact(3))
+-  ...
+
+如果输入 `fact(1000)` 就会发生栈溢出： `RuntimeError: maximum recursion depth exceeded in comparison`
+
+因此我们需要使用**尾递归调用**，实际上就是**函数 return 自身，仅参数不同**，这样执行的时候就只会保留一个堆栈
+
+例如累积计算实际可以转换成接收两个参数，**当前要乘的数** 和 **上一轮计算的结果** ， 并将两者相乘 
+
+<<< @/codes/python-demo/tail_recursive.py
+
+::: tip
+我们使用递归通常是为了简介的写法，但执行效率不高，尾递归是一种折中的办法
+:::
+
+## 常用函数
 
 ### map/reduce/filter
 
@@ -287,9 +302,29 @@ sorted([36, 5, -12, 9, -21] , key=abs) # [5, 9, -12, -21, 36] 按绝对值大小
 sorted([36, 5, -12, 9, -21] , reverse=True ) #  倒序
 ```
 
+
 ### 类型转换
 
 ```python
 a = '123'
 print(int(a)) # 123
 ```
+
+### 判断变量类型
+
+```python
+x = 'abc'
+y = 123
+
+isinstance(x , str)
+isinstance(y , str)
+```
+
+### 求和函数
+
+```python
+a = [1,2,3]
+
+print(sum(a))
+```
+
