--- a/docs/02.后端/03.python/01.学习笔记/03.函数.md
+++ b/docs/02.后端/03.python/01.学习笔记/03.函数.md
@@ -82,22 +82,6 @@ myFunction("hello", "mars", a = 24, b = 87, c = 3, d = 46)
 # {'b': 87, 'c': 3, 'd': 46}
 ```
 
-#### 简写
-
-为函数传入参数时，有一些简便的写法， 它看起来很像`ECMAScript6` 中的解构语法 , `*` 可以解构 `tuple` 和 `list` ， `**` 可以解构 `dict` 为带名参数：
-
-```python
-def func(*rest , **kw):
-    print(rest) # (1, 2, 3, 4, 5, 6)
-    print(kw) # {'city': 'beijing', 'age': 18}
-
-a = [1, 2, 3]
-b = [4, 5, 6]
-c = {'city' : 'beijing' , 'age' : 18}
-
-func(*a, *b , **c)
-
-```
 
 #### 默认参数的坑
 
@@ -200,6 +184,56 @@ def fact(n):
 ::: tip
 我们使用递归通常是为了简介的写法，但执行效率不高，尾递归是一种折中的办法
 :::
+
+### 闭包函数与for循环
+
+这是一个经典的闭包例子，count函数生成一个函数列表，每个函数计算1-3数字的平方和：
+
+```python
+def count():
+    fs = []
+    for i in range(1,4):
+        def compute():
+            return i * i
+        fs.append(compute)
+    return fs
+
+f1,f2,f3 = count()
+
+print(f1())  # 我们希望得到的结果是1*1 = 1，但这里返回了9
+```
+
+闭包函数实际上简单理解就是 **执行时才计算的懒函数**，这里等到我们执行函数 `f1` 的时候，for循环早就结束了，导致 `compute` 函数中 i 的引用指向的值是3，因此返回了结果9： 
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220602104850.png)
+
+::: danger
+返回闭包函数时注意：函数不要引用 **循环变量** 和 **会发生变化的数据结构（列表，字典）**
+:::
+
+如果一定要用循环变量的话，其实也有解决办法，答案是改变所调用参数的引用。
+
+原先 `compute` 函数保持对循环变量 i 的引用。我们调用一个普通函数将当前的 i 变量的值保存下来：
+
+```python
+def count():
+    fs = []
+
+    for i in range(1,4):
+        
+        def keep(num):  
+            def compute():
+                return num * num
+            return compute
+        
+        fs.append(keep(i))
+    return fs
+
+f1,f2,f3 = count()
+
+print(f1())  # 1
+```
+
 
 ## 常用函数
 
@@ -328,3 +362,16 @@ a = [1,2,3]
 print(sum(a))
 ```
 
+### range
+
+因为Python 完完全全是一个面向对象的语言，它没有面向过程的for循环代码，如js中的 `for(let i = 0 ; i < 3 ; i ++)` ，为了实现过程循环，我们需要一个 `range` 函数，它帮我们定义一个可迭代对象，可迭代对象是一个生成器，会不断抛出给定范围内的数字：
+
+```python
+print(range(3)) # range(0,3)
+
+for num in range(3):
+    print(num) # 0,1,2
+
+for num in range(1,3):
+    print(num) # 1,2
+```
