feat: python - decorator

--- a/docs/02.后端/03.python/01.学习笔记/03.函数.md
+++ b/docs/02.后端/03.python/01.学习笔记/03.函数.md
@@ -235,6 +235,46 @@ print(f1())  # 1
 ```
 
 
+### 装饰器
+
+装饰器的本质是用一个函数包裹源函数，形成嵌套结构，包裹函数相当于为原函数添加了一层“装饰”。包裹函数返回一个新的函数，我们调用的是新函数而不是原函数，因此需要用`*args , **kwargs` 获取给新函数传入的参数并用它来执行原函数。
+
+```python
+def log(func):
+    print('call' , func.__name__) # 打印函数名
+    def wrapper(*args , **kwargs): # 装饰后返回的新函数，*args和 **kwargs 接收调用时传入的参数
+        func(*args , **kwargs) # 用传入的参数执行原函数
+    return wrapper
+
+def hello(name):
+    print('hello' ,name)
+
+newHello = log(hello) # newHello = wrapper
+
+newHello('liming')  # call hello , hello liming
+```
+
+`python` 提供了一种方便的语法糖来简化上面的写法，不用改变装饰器函数的写法，只是 **包裹** 和 **调用** 的时候有一些区别：
+
+```python
+@log
+def hello(name):
+    print('hello' ,name)
+
+hello('liming') # call hello , hello liming
+```
+
+-   将 `@装饰器函数` 写在需要原函数的上一行，它会自动将原函数最为唯一参数传入装饰器函数中
+-   这样装饰过的函数的名字和原函数一致，你可以理解为它执行了 `hello = log(hello) `
+
+因为装饰器函数返回新函数的写法总是一致的：用传入的参数执行原函数，所以似乎用 **匿名函数lambda**编写看起来更简洁舒适：
+
+```python
+def log(func):
+    print('call' , func.__name__) # 打印函数名
+    return lambda *args , **kwargs : func(*args , **kwargs)
+```
+
 ## 常用函数
 
 ### map/reduce/filter
