feat: python-decorator

--- a/docs/02.后端/03.python/01.学习笔记/03.函数.md
+++ b/docs/02.后端/03.python/01.学习笔记/03.函数.md
@@ -264,7 +264,7 @@ def hello(name):
 hello('liming') # call hello , hello liming
 ```
 
--   将 `@装饰器函数` 写在需要原函数的上一行，它会自动将原函数最为唯一参数传入装饰器函数中
+-   将 `@装饰器函数` 写在需要原函数的上一行，它会自动将原函数作为**唯一参数**传入装饰器函数中
 -   这样装饰过的函数的名字和原函数一致，你可以理解为它执行了 `hello = log(hello) `
 
 因为装饰器函数返回新函数的写法总是一致的：用传入的参数执行原函数，所以似乎用 **匿名函数lambda**编写看起来更简洁舒适：
@@ -274,6 +274,30 @@ def log(func):
     print('call' , func.__name__) # 打印函数名
     return lambda *args , **kwargs : func(*args , **kwargs)
 ```
+
+使用 `@` 语法糖进行装饰器的添加虽然十分便捷，但如果我们要将参数和原函数一起传入装饰器中就不太好办了。因为 `@` 只会将下一行的原函数作为 **唯一参数** 传入装饰器。为了解决传参问题，我们需要在装饰器外面**多包装一层函数用来接收参数**：
+
+```python
+def log(user , operate):
+    def decorator(func):
+        print(user, operate , func.__name__) # 打印函数名
+        def wrapper(*args , **kwargs): # 装饰后返回的新函数，*args和 **kwargs 接收调用时传入的参数
+            func(*args , **kwargs) # 用传入的参数执行原函数
+        return wrapper
+    return decorator
+
+@log('root' , 'call')
+def hello(name):
+    print('hello' ,name)
+
+hello('liming') # root call hello ; hello liming
+```
+
+我们真正做的事情是：
+1.  执行外层函数，将参数传入，**并返回一个装饰器**
+2.  用返回的装饰器包装原函数
+
+
 
 ## 常用函数
 
