feat: python - @property

--- a/docs/02.后端/03.python/01.学习笔记/03.函数.md
+++ b/docs/02.后端/03.python/01.学习笔记/03.函数.md
@@ -297,7 +297,9 @@ hello('liming') # root call hello ; hello liming
 1.  执行外层函数，将参数传入，**并返回一个装饰器**
 2.  用返回的装饰器包装原函数
 
-
+::: tip
+装饰器是如何实现的，详见[装饰器详解](/pages/902ad7/)
+:::
 
 ## 常用函数
 
