--- a/docs/02.后端/03.python/01.学习笔记/05.面向对象编程.md
+++ b/docs/02.后端/03.python/01.学习笔记/05.面向对象编程.md
@@ -28,7 +28,7 @@ bart.hello()
 
 ## 私有属性
 
-我们[上一节](/pages/b5ead5/)提到过：*类中的属性如果被命名为 `_xxx,__xxx` 则会被真正转换为私有属性* ， 现在我们来尝试一下：
+我们[上一节](/pages/b5ead5/)提到过：*类中的属性如果被命名为 `__xxx` 则会被真正转换为私有属性* ， 现在我们来尝试一下：
 
 ```python
 class Student:
@@ -180,6 +180,11 @@ b.b = 'b'  # 'B' object has no attribute 'b'
 ::: tip
 廖雪峰老师的表述是子类父类都有slots，则会合并。与笔者尝试不符，猜测是python版本问题，笔者是 python3.10.4
 :::
+
+## @property装饰器
+
+`@property` 和 `ECMAScript6` 中的 `Proxy` 十分相似，只不过Proxy是为对象的属性设置 `getter/setter` ， 而@property可以为任意的类属性设置 getter/setter：
+
 
 
 ## 常用方法
