--- a/docs/01.前端/02.Vue/02.Vue3/07.v-model.md
+++ b/docs/01.前端/02.Vue/02.Vue3/07.v-model.md
@@ -62,8 +62,49 @@ const updateTitle = (value :string) =>{
 1.  将 **[modelValue]** 作为属性名绑定到子组件上
 2.  将 **update:[modelValue]** 作为自定义事件绑定到子组件上
 
+::: tip
+在刚才的例子中，我们将 `modelValue` 定义为 `title` ，但如果我们没有提供名字，则名字默认为 **modelValue**
+:::
+
 而自定义事件和 `emit` 是分不开的，我们需要在子组件里定义 `emits` 并通过emit提供函数 `updateTitle`的参数**value**：
 
 <<<@/codes/vue-demo/pages/vue3/v-model/my-component.vue
 
 总结：将子组件的 `v-model` 当成emit来用就行了。
+
+## 自定义修饰符
+
+`v-model` 为我们提供了一些默认的修饰符，如过滤首尾空白字符：`<input v-model.trim="msg" />`。其实在自定义组件中，我们可以主动获取v-model的修饰符，如 `{trim : true}`，并以此自定义修饰符和处理原则.
+
+调用子组件时加入自定义修饰符：
+
+```vue
+<myComponentVue v-model:title.myDecorator="title" />
+```
+
+子组件接收一个props，名字是：**[modelValue]Modifiers**。它将返回一个包含修饰符的对象，比如下面这个例子，它将返回`{myDecorator : true}`。
+
+```js
+
+const props = defineProps({
+    title : String,
+    titleModifiers : {
+        default :{}
+    }
+    // modelModifiers : {
+    //     default : {}
+    // }
+})
+
+const inputValue = (e )=>{
+    if(props.titleModifiers.myDecorator){
+        console.log('do something');
+    }
+    emit('update:title' , e.target.value)
+}
+
+```
+
+::: tip
+如果没有提供model名，则默认的修饰符函数名为 `modelModifiers`
+:::
