feat: mysql 基本查询、条件查询

--- a/docs/02.后端/04.mysql/01.起步.md
+++ b/docs/02.后端/04.mysql/01.起步.md
@@ -2,6 +2,10 @@
 
 https://www.liaoxuefeng.com/wiki/1177760294764384
 
+## 结构
+
+数据库 -- 表 -- 记录
+
 ## 术语
 
 **SQL** : `structured query language` 结构化查询语言，用来访问和操作数据库系统。
@@ -20,6 +24,30 @@ https://www.liaoxuefeng.com/wiki/1177760294764384
 
 **外键**： 通过一个字段来关联另一张表，这个字段称为外键
 
+**索引** ： 为某一列创建索引可以加快查找速度，但减缓增删改的速度；主键默认创建索引
+
+```sql
+ALTER TABLE students
+ADD INDEX idx_score (score);
+```
+
+为 `score` 列创建了一个名为 `idx_score` 的索引
+
+```sql
+ALTER TABLE students
+ADD UNIQUE INDEX uni_name (name);
+```
+
+如果某个字段不能有重复的值（比如身份证），可以创建一个 *唯一索引*
+
+```sql
+ALTER TABLE students
+ADD CONSTRAINT uni_name UNIQUE (name);
+```
+
+如果希望保持唯一性但不创建索引，可以添加一个唯一约束 `constraint` ：
+
+
 ## 数据类型
 
 -   INT 
@@ -34,4 +62,76 @@ https://www.liaoxuefeng.com/wiki/1177760294764384
 -   TIME : 存储时间，例：12:20:59
 -   DATETIME ： 存储日期+ 时间 ， 例： 2018-06-22 12:20:59
 
-## 
+## 查询
+
+### 查询所有行：
+
+```sql
+SELECT * FROM <表名>
+```
+
+::: tip
+`SELECT 1 ;` 可以用来测试数据库连接
+:::
+
+### 条件查询
+
+**IF：**
+
+`SELECT * FROM <表名> WHERE <条件表达式>`
+
+```sql
+SELECT * FROM students WHERE score >= 80
+```
+
+**与：**
+
+`SELECT * FROM <表名> WHERE <条件一> AND <条件二>`
+
+```sql
+SELECT * from students WHERE class_id = 1 AND SCORE >= 80
+```
+::: tip
+sql中没有赋值和变量，可以直接用`=`代表等号
+:::
+
+**或：**
+
+`SELECT * FROM <表名> WHERE <条件一> OR <条件二>`
+
+**非：**
+
+`SELECT * FROM <表名> WHERE NOT <条件一>`
+
+更常用的： `SELECT * FROM <表名> WHERE class_id <> 2`  等于 `SELECT * FROM <表名> WHERE NOT class_id = 2`   **将=换成`<>`表示不等**
+
+#### 优先级
+
+NOT > AND > OR , 加上括号可以改变优先级；例：
+
+```sql
+-- 分数小于80或大于90的男性
+SELECT * FROM students WHERE (score < 80 OR score > 90) AND gender = 'M'; 
+-- 分数小于80或 分数大于90且是男性
+SELECT * FROM students WHERE score < 80 OR score > 90 AND gender = 'M'; 
+```
+
+因为 `AND` 大于 `OR` ， 所以在第二个表达式中，会优先计算后面的式子。
+
+
+#### 运算符
+
+**a BETWEEN x AND y**，取某一个区间，等价于 `a >= x + a <= y`
+
+以下两种写法等价：
+```sql
+WHERE score BETWEEN 60 AND 90
+WHERE score >= 60 AND score <= 90
+```
+
+**LIKE + %**: 判断字符串是否相似， `%` 可以代替任意字符
+
+例：
+```sql
+SELECT * FROM students WHERE name LIKE "%明" -- 小明 
+```
