--- a/docs/03.工具/05.markdown.md
+++ b/docs/03.工具/05.markdown.md
@@ -21,3 +21,9 @@ tags:
 ## 删除线
 
 ~~世界是平坦的。~~ 我们现在知道世界是圆的。
+
+## 表格
+| 一个普通标题 | 一个普通标题 | 一个普通标题 |
+| ------ | ------ | ------ |
+| 短文本 | 中等文本 | 稍微长一点的文本 |
+| 稍微长一点的文本 | 短文本 | 中等文本 |
