--- a/docs/02.后端/05.java/01.起步.md
+++ b/docs/02.后端/05.java/01.起步.md
@@ -21,17 +21,8 @@
 -   `JDK` : *java development kit*  : 开发工具，包括编译器，调试器和JRE
 -   `JRE` ：*java runtime environment* : 运行环境，运行在虚拟机jvm上
 -   `JVM` : *java virtual machine* : 虚拟机，运行class
--   `jar` : class集合的压缩包（可以直接将后缀.zip改成.jar），可以直接被java程序执行，如
-
-```
-java -cp ./hello.jar abc.xyz.Hello
-```
-
-::: tip
-jar包可以包含 **/META-INF/MANIFEST.MF** 文件，`MANIFEST.MF`是纯文本，可以指定启动类，这样运行时就可以省略类名：`java -cp ./hello.jar`
-
-`Maven` 可以用来帮助我们创建jar包
-:::
+-   `jar` : class集合的压缩包（可以直接将后缀.zip改成.jar），可以直接被java程序执行
+-   `jmod` : jar拆分出的模块包（二次打包，新增 `module-info.java` 文件，编写模块之间的依赖关系）
 
 ## 函数
 
