--- a/docs/02.后端/05.java/10.jar和模块.md
+++ b/docs/02.后端/05.java/10.jar和模块.md
@@ -1,9 +1,93 @@
 ## jar
 
+`jar`就是`class类`的一个集合包，能够通过jar指令来创建，我们在上一节中将编译后的class文件放入了**bin**文件夹下，我们尝试将这些class文件打包成jar包：
 
+```bash
+jar -c -f JavaTester.jar --main-class src.moduleDemo.JavaTester -C bin .
+```
 
-## 简介
+-   **-c** : 等于 `--create` ，创建一个新的jar包
+-   **-f** : 等于 `--file`，指明创建的jar名字,这里是`JavaTester.jar`
+-   **--main-class** ： 指明jar包的入口类名字，这里是`src.moduleDemo.JavaTester`
+-   **-C** : 指明要打包的文件夹，这里是bin文件夹
+-   最后的`.` : 指明要输出的路径为当前路径
 
-`模块module`是 `Java9` 引入的一个概念，它带来了两个重要的功能：
-1.  将用户引用的庞大的jar包切割成多个子模块
+我们可以通过`java` 指令的 `-jar` 来直接运行`jar包`：
+
+```bash
+java -jar  JavaTester.jar
+```
+
+## 模块module
+
+`模块module`是 `Java9` 引入的一个概念，它的实质是 **package包的集合** 它带来了两个重要的功能：
+1.  将用户引用的庞大的jar包切割成多个子模块`jmod`
 2.  往常运行一个Java项目需要自行下载完整的JRE运行环境。引入了模块后，JRE同样被切割成各个子模块，可以通过 `jlink` 命令将需要的JRE模块和项目链接打包。用户直接运行即可。
+
+#### 创建模块
+
+我们可以通过 `jmod` 命令将一个jar包转换为jmod模块。
+
+```bash
+jmod create --class-path JavaTester.jar JavaTester.jmod
+```
+
+-   **--class-path** ： 指明要分割的jar包
+
+然后我们得到了一个报错：`错误: module-info.class not found`。原因是如果你直接让编译器去分割jar包，它不明白要按什么规则来分割，需要一个`module-info.class`文件来指明分割规则：
+
+```java
+module src.firstModule{
+    requires java.base; // 可不写，任何模块都会自动引入java.base    
+}
+```
+
+然后开始一连串操作：
+
+1.  将 `src/moduleDemo` 中所有的java文件到bin文件夹下，并单独编译模块描述文件`src/module-info.java`
+
+```bash
+javac -d  bin src/module-info.java src/moduleDemo/*.java
+```
+
+2.  将bin文件夹打包成一个jar文件 `firstModule.jar`
+
+```bash
+jar -c -f firstModule.jar --main-class src.moduleDemo.JavaTester -C bin .
+```
+
+3.  将jar文件打包成一个jmod文件 : `firstModule.jmod`
+
+```bash
+jmod create --class-path firstModule.jar firstModule.jmod
+```
+
+4.  将jmod文件和所需的jre（运行环境）通过`jlink`打包到jre文件夹下
+
+```bash
+jlink --module-path firstModule.jmod --add-modules src.firstModule --output jre/
+```
+
+-   **--module-path** : 指明要链接的jmod文件
+-   **--add-modules** : 指明要链接的module名字（在module-info.java中定义的）
+
+5.  直接用打包好的jre执行module文件：
+
+```bash
+jre/bin/java --module src.firstModule        
+```
+
+::: tip
+这么复杂的操作当然是由ide帮我们来完成啦:D
+:::
+
+#### module-info
+
+定义一个module，用`requires` 表示需要哪些module，用`exports`暴露一个module中的某些包
+
+```java
+module <module-name> {
+   requires <module-name1>;
+   exports <package-name1>;
+}
+```
