feat : mysql 多表查询，连表查询

--- a/docs/02.后端/04.mysql/02.查询.md
+++ b/docs/02.后端/04.mysql/02.查询.md
@@ -96,6 +96,18 @@ WHERE NAME LIKE "K%";
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220614140032.png)
 
+#### 别名
+
+```sql
+SELECT 
+CountryCode cc,
+District d
+FROM CITY 
+WHERE NAME LIKE "K%";
+```
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220615141841.png)
+
 
 ### 排序
 
@@ -166,4 +178,121 @@ GROUP BY CountryCode
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220614162828.png)
 
+### 多表查询
 
+```sql
+SELECT * FROM students, classes;
+```
+
+返回数据为两表的 **乘积**，它的结构如下：
+
+```
+学生一列一 | 学生一列二 | 班级一列一 | 班级一列二
+学生一列一 | 学生一列二 | 班级二列一 | 班级二列二
+学生一列一 | 学生一列二 | 班级三列一 | 班级三列二
+...
+
+学生二列一 | 学生二列二 | 班级一列一 | 班级一列二
+...
+```
+
+> 结果集的列数是 `students` 表和 `classes` 表的列数之和，行数是 `students` 表和 `classes` 表的行数之积。
+
+
+#### 别名
+
+两个表中如果都有id（这是常见的情况），可以用 `表名.列名 别名` 来设置列的别名
+
+```sql
+SELECT
+    students.id sid,
+    students.name,
+    students.gender,
+    students.score,
+    classes.id cid,
+    classes.name cname
+FROM students, classes;
+```
+
+同样也可以为表设置别名：
+
+```sql
+SELECT
+    s.id sid,
+    s.name,
+    s.gender,
+    s.score,
+    c.id cid,
+    c.name cname
+FROM students s, classes c;
+```
+
+::: tip
+事实上多表查询与条件语句配合使用才是更常见的情况：
+:::
+
+```sql
+SELECT
+    s.id sid,
+    s.name,
+    s.gender,
+    s.score,
+    c.id cid,
+    c.name cname
+FROM students s, classes c
+WHERE s.gender = 'M' AND c.id = 1;
+```
+
+### 连接查询
+
+多表查询做的事情同样也可以用连接查询来写，例如我们通过多表查询将学生名和它的班级筛选出来：
+
+```sql
+SELECT
+    s.name,
+    c.name class_name
+FROM students s, classes c
+WHERE S.class_id = C.id
+```
+
+连接查询的意思是用第一张表构建一张主表，然后通过 `JOIN` 语句将查询其他表的结果连接到主表上，对其他表的条件筛选用 `ON` 关键字：
+
+```sql
+SELECT S.name , C.name class_name
+from STUDENTS S
+INNER JOIN classes C
+ON S.class_id = C.id;
+```
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220615150434.png)
+
+::: tip
+`ON` 关键字和 `WHERE` 关键字不冲突，都可以添加
+:::
+
+然而连接查询也有它自己的特点：**取交并集**
+
+-   **INNER JOIN** : 取两表交集
+
+![](https://www.liaoxuefeng.com/files/attachments/1246892164662976/l)
+-   **LEFT OUTER JOIN** : 左表展示所有的行
+
+![](https://www.liaoxuefeng.com/files/attachments/1246893588481376/l)
+-   **RIGHT OUTER JOIN** ： 右表展示所有的行
+
+![](https://www.liaoxuefeng.com/files/attachments/1246893609222688/l)
+
+::: tip
+MYSQL不支持全关联 `FULL OUTER JOIN`
+:::
+
+```SQL
+SELECT S.name , C.name class_name
+from STUDENTS S
+RIGHT OUTER JOIN classes C
+ON S.class_id = C.id;
+```
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220615151725.png)
+
+可以看到，虽然班级四没有匹配到的学生，但是因为右表要展示所有行，所以班级四匹配的学生是 `NULL` 
