--- a/docs/02.后端/03.python/01.学习笔记/05.面向对象编程.md
+++ b/docs/02.后端/03.python/01.学习笔记/05.面向对象编程.md
@@ -69,7 +69,7 @@ bart = Monitor('bart' , 18 )
 bart.get_name()
 ```
 
-结果打印出了 `monitor` 和 `报错'Monitor' object has no attribute '_Student__name'`，好了，现在我们知道会优先调用子类的构造方法。
+结果打印出了 `init monitor` 和 `报错'Monitor' object has no attribute '_Student__name'`，好了，现在我们知道会优先调用子类的构造方法。
 
 嗯？为什么我调用继承来的方法报错了？看来python解释器在编译私有属性的时候并不是通过调用者来编译的，我们想象的情况是：
 
@@ -180,10 +180,6 @@ b.b = 'b'  # 'B' object has no attribute 'b'
 ::: tip
 廖雪峰老师的表述是子类父类都有slots，则会合并。与笔者尝试不符，猜测是python版本问题，笔者是 python3.10.4
 :::
-
-## @property装饰器
-
-`@property` 和 `ECMAScript6` 中的 `Proxy` 十分相似，只不过Proxy是为对象的属性设置 `getter/setter` ， 而@property可以为任意的类属性设置 getter/setter：
 
 
 
