--- a/docs/02.后端/03.python/01.学习笔记/06.装饰器详解.md
+++ b/docs/02.后端/03.python/01.学习笔记/06.装饰器详解.md
@@ -13,3 +13,6 @@ sitemap:
   changefreq: monthly
 ---
 
+
+`@property` 和 `ECMAScript6` 中的 `Proxy` 十分相似，只不过Proxy是为对象的属性设置 `getter/setter` ， 而@property可以为任意的类属性设置 getter/setter：
+
