feat: swr - 预加载

--- a/docs/01.前端/01.React/02.SWR/01.入门.md
+++ b/docs/01.前端/01.React/02.SWR/01.入门.md
@@ -33,17 +33,84 @@ yarn add swr
 
 ### 那么用Swr有什么不同呢？代码如下
 
-<<< @/codes/react-demo/src/pages/swr/compare/swr-demo.jsx
+```js
+import React from 'react';
+import useSWR from 'swr'
+
+const fetcher = (...args) => fetch(...args).then((res) => res.json())
+
+function fetchData() {
+    const { data, error } = useSWR(`https://animechan.vercel.app/api/random`, fetcher)  // useSWR的第一个参数会传入fetcher方法中
+
+    return {
+        data,
+        isLoading: !error && !data, // 非失败非成功 = 加载中
+        isError: error,
+    }
+}
+
+function Page() {
+    return (
+        <div>
+            <Header />
+            <Content />
+        </div>
+    );
+}
+
+function Header() {
+    const { data, isLoading } = fetchData()
+    if (isLoading) return <div>Loading...</div>
+    return <div>
+        动漫的名字是：{data.anime}
+    </div>
+}
+
+function Content() {
+    return (
+        <div>
+            <Character  />
+            <Quote/>
+        </div>)
+}
+
+function Character() {
+    const { data, isLoading } = fetchData()
+    if (isLoading) return <div>Loading...</div>
+    return <div>角色有：{data.character}</div>
+}
+function Quote() {
+    const { data, isLoading } = fetchData()
+    if (isLoading) return <div>Loading...</div>
+    return <div>有什么名句：{data.quote}</div>
+}
+
+export default Page;
+```
 
 最明显的不同是，我们的父组件不再管理数据，每个组件可以自行拿到自己需要的数据,如
 
-<<< @/codes/react-demo/src/pages/swr/compare/swr-demo.jsx#snippet{1}
+```js
+function Character() {
+    const { data, isLoading } = fetchData()
+    if (isLoading) return <div>Loading...</div>
+    return <div>角色有：{data.character}</div>
+}
+```
 
 你可能会有所疑问，`fetchData`函数看起来有点像`await`方法，进行了一次异步请求，并返回了`data`数据用于渲染。但是，我们一共写了三个`fetchData`，这是否意味着请求会发送三次呢？
 
 ![](https://s2.loli.net/2022/04/23/VnFB8WT9skYdxp2.png)
 
 事实上是并没有。原因是因为我们三次请求的地址都是`https://animechan.vercel.app/api/random`，`Swr`会对这三次请求进行`去重、缓存、共享`处理。
+
+::: tip
+实际上，请求去重的原理很简单。首先，swr方法的结构具体如下：
+
+`const { data, error, isValidating, mutate } = useSWR(key, fetcher, options)`
+
+useSWR的第一个参数除了作为请求地址还会被作为key值缓存当前请求到的数据，在下一次请求时swr发现key值相同，则读取缓存中的值
+:::
 
 **此外，自动重新请求也是swr的一大特色**
 
